# House-Price-Prediction

./: .gitattributes  00-main.py  01-EDA-contextual-imputation.py  01-data-preparation-contextual-imputation.py  02-EDA-separate-imputation-encoding.py  02-EDA-separate-imputation.py  02-data-preparation-imputation-encoding.py  03-EDA-charts-before-interactions.py  03-EDA-charts.ipynb  03-EDA-charts.py  03-data-preparation-standardization.py  04-data-preparation-interaction.py  04-data-preparation-interactions.py  04-model-regressions-svr.py  05-EDA-charts-after-interactions.py  05-model-ML-trees.py  06-data-preparation-standardization.py  06-model-ML-catboost.py  07-model-ML-stacking.py  07-model-regressions-svm.py  07-model-regressions.py  08-model-ML-trees.py  08-model-ML.py  09-model-ML-stacking.py  09-model-NN.py  10-final-stacking.py  10-model-NN.py  10-prediction.py  11-model-NN-stacking.py  12-prediction.py  EDA-charts.py  README.md  cluster.py  data_description_detailed.txt  data_exploration.Rmd  install.sh  models.py  pyproject.toml  regression_imputation.py
data/: csv_to_duckdb.py
s0_eda/: EDA-charts.py
s1_data/: 01-data-preparation-contextual-imputation.py  02-data-preparation-imputation-encoding.py  __main__.py  a0_setup_directories.py  a1_contextual_imputation.py  a1_load_raw_data.py  a2_load_macroecon.py  a3_contextual_imputation.py  a4_advanced_imputation.py  a5_regression_data_prep.py  a6_svr_data_prep.py  a7_knn_data_prep.py  a8_general_ml_data_prep.py  a9_catboost_data_prep.py  data_description_detailed.txt
s2_model/: 04-model-regressions-svr.py  (+15 more)
(+3 files in other folders)
